Host with GitHub.

--- a/analysis/_site.yml
+++ b/analysis/_site.yml
@@ -1,7 +1,7 @@
-name: "multigroup_ctwas_analysis"
+name: multigroup_ctwas_analysis
 output_dir: ../docs
 navbar:
-  title: "multigroup_ctwas_analysis"
+  title: multigroup_ctwas_analysis
   left:
   - text: Home
     href: index.html
@@ -9,6 +9,10 @@ navbar:
     href: about.html
   - text: License
     href: license.html
+  right:
+  - icon: fab fa-github
+    text: Source code
+    href: https://github.com/sq-96/multigroup_ctwas_analysis
 output:
   workflowr::wflow_html:
     toc: yes
